fix featured spacing

--- a/css/grid.css
+++ b/css/grid.css
@@ -1158,7 +1158,7 @@ span.circlenumber {
 		margin-left: auto;
 		margin-right: auto;
 		width: 100%;
-		margin-top: 10rem;
+		margin-top: 5rem;
   }
 
   .featured h1, h2, h3 {
